# AndroidWhiteboard

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mouselee/androidwhiteboard/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: canvas_editor.vert  canvas_editor_eraser.frag  canvas_editor_paint.frag
app/src/main/cpp/: AssetHelper.cpp  AssetHelper.h  CMakeLists.txt  glerror.cpp  native-lib.cpp
app/src/main/java/com/mouselee/androidwhiteboard/: CanvasView.kt  Configs.kt  CurveShape.kt  DrawShape.kt  DrawType.kt  MainActivity.kt  MyApp.kt  Number.kt  Renderer.java  Util.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  main_window_color_selector.xml  main_window_size_selector.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mouselee/androidwhiteboard/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
